syntax = "proto2";

import "asset.proto";

package hive.protocol.buffers;

/* Witnesses must vote on how to set certain chain properties to ensure a smooth
 * and well functioning network.  Any time owner is in the active set of witnesses these
 * properties will be used to control the blockchain configuration.
 *
 * @param {asset} account_creation_fee - This fee, paid in HIVE, is converted into VESTS for the new account.
 *                                       Accounts without vesting shares cannot earn usage rations and therefore are powerless.
 *                                       This minimum fee requires all accounts to have some kind of commitment
 *                                       to the network that includes the ability to vote and make transactions.
 * @param {number} maximum_block_size - This witnesses vote for the maximum_block_size which is used by the network to tune rate limiting and capacity.
 * @param {number} hbd_interest_rate
 */
message legacy_chain_properties {
  required asset  account_creation_fee = 1 [json_name = "account_creation_fee"];
  required uint32 maximum_block_size = 2 [json_name = "maximum_block_size"];
  required uint32 hbd_interest_rate = 3 [json_name = "hbd_interest_rate"];
}
